index.html index.css, 0, fixed/learned how to solve the sideNav and navigation, ubuntu Terminal

--- a/index.html
+++ b/index.html
@@ -8,12 +8,21 @@
    <body>
       <header class='headerWrapper'>
          <div class='headerNavigation'>
-            <ul class='navigationList'>
+            <ul class='headerNavigationList'>
                <li><a href='#'>Home</a></li>
                <li><a href='#'>Contact Us</a></li>
                <li><a href='#'>Location</a></li>
             </ul>
          </div> 
       </header>
+      <aside class='sidebarWrapper'>
+         <div class='sidebarNavigation'>
+            <ul class='sidebarNavigationList'>
+               <li><a href='#'>Username</a></li>
+               <li><a href='#'>JobFeeds</a></li>
+               <li><a href='#'>Account Status</a></li>
+            </ul>
+         </div>
+      </aside>
    </body>
 </html>
