--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
    <head>
-      <meta charset='UTF-8' name='viewport' content='width=device-width, initial-scale=1'>
-      <link rel='stylesheet' href='index.css'>
+     <meta charset='UTF-8' name='viewport' content='width=device-width, initial-scale=1'>
+     <link rel='stylesheet' href='index.css'>
+      <link rel='stylesheet' href='smallSize.css' media='screen and (max-width: 760px)'>
+      <link rel='stylesheet' href='mobileSize.css' media='screen and (max-width: 480px)'>
       <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Raleway:300'>
    </head>
    <body>
@@ -12,6 +14,7 @@
                <li><a href='#'>Home</a></li>
                <li><a href='#'>Contact Us</a></li>
                <li><a href='#'>Location</a></li>
+               <li><a href='#'>Products</a></li>
             </ul>
          </div> 
       </header>
